apps/cloudcart/order-service/order-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: order-service
  namespace: cloudcart-dev

spec:
  replicas: 1

  selector:
    matchLabels:
      app: order-service

  template:
    metadata:
      labels:
        app: order-service

    spec:
      containers:
        - name: order-service

          image: roshan033/cloudcart-order-service:build-20

          imagePullPolicy: Always

          ports:
            - containerPort: 5003

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
