apps/cloudcart/order-service/order-service-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: order-service
  namespace: cloudcart-dev

spec:
  type: ClusterIP

  selector:
    app: order-service

  ports:
    - port: 5003
      targetPort: 5003
